--- a/public/localNews.html
+++ b/public/localNews.html
@@ -157,7 +157,7 @@ var province=getUrlParam('province');
                                 urls=data[i].url;
                                 provinces=data[i].province;
                                 var aUrl=del_html_tags(base64encode(urls),"=","");
-                                if(provinces==decodeURI(province)){
+                                // if(provinces==decodeURI(province)){
                                     if(!("imgList" in data[i])){
                                     //alert(true)
                                     //return;
@@ -195,7 +195,7 @@ var province=getUrlParam('province');
                                         $("<div class='yindaoForminner'></div>").html(timeCha).appendTo("#form"+i);
                                     }
                                 }
-                                }
+                                // }
                                 
                             }}
                             $("img").load(function(){
@@ -234,7 +234,7 @@ var province=getUrlParam('province');
                                 urls=data[i].url;
                                 provinces=data[i].province;
                                 var aUrl=del_html_tags(base64encode(urls),"=","");
-                                if(provinces==decodeURI(province)){
+                                // if(provinces==decodeURI(province)){
                                     if(!("imgList" in data[i])){
                                     //alert(true)
                                     //return;
@@ -271,7 +271,7 @@ var province=getUrlParam('province');
                                         $("<div class='yindaoForminner'></div>").html(timeCha).appendTo("#formd"+is);
                                     }
                                 }
-                                }
+                                // }
                                 
 
                             }
