--- a/public/localNews.html
+++ b/public/localNews.html
@@ -188,7 +188,9 @@ var province=getUrlParam('province');
                                         $("<div class='yindaoTubox'></div>").attr("id","tubox"+i).appendTo("#a"+i);
                                         for(var j=0;j<imgLists.length;j++){
                                             //alert(imgList.length)
-                                            $("<div class='yindaoTu'>").attr("id","tu"+j).css({"background":"url("+imgLists[j]+")","background-size":"cover"}).appendTo("#tubox"+i);
+                                            // $("<div class='yindaoTu'>").attr("id","tu"+j).css({"background":"url("+imgLists[j]+")","background-size":"cover"}).appendTo("#tubox"+i);
+                                $("<div class='yindaoTu'><img src="+imgLists[j]+"></div>").appendTo("#tubox"+i);
+                                            
                                         }
                                         $("<div class='yindaoForm'></div>").attr("id","form"+i).appendTo("#a"+i);
                                         $("<div class='yindaoForminner' style='margin-left: 0'></div>").html(pubName).appendTo("#form"+i);
@@ -264,7 +266,9 @@ var province=getUrlParam('province');
                                         $("<div class='yindaoTitle'></div>").html(title).attr("id","titled"+is).appendTo("#ad"+is);
                                         $("<div class='yindaoTubox'></div>").attr("id","tuboxd"+is).appendTo("#ad"+is);
                                         for(var j=0;j<imgLists.length;j++){
-                                            $("<div class='yindaoTu'>").attr("id","tud"+j).css({"background":"url("+imgLists[j]+")","background-size":"cover"}).appendTo("#tuboxd"+is);
+                                            // $("<div class='yindaoTu'>").attr("id","tud"+j).css({"background":"url("+imgLists[j]+")","background-size":"cover"}).appendTo("#tuboxd"+is);
+                                $("<div class='yindaoTu'><img src="+imgLists[j]+"></div>").appendTo("#tubox"+i);
+
                                         }
                                         $("<div class='yindaoForm'></div>").attr("id","formd"+is).appendTo("#ad"+is);
                                         $("<div class='yindaoForminner' style='margin-left: 0'></div>").html(pubName).appendTo("#formd"+is);
