--- a/public/news.html
+++ b/public/news.html
@@ -61,10 +61,10 @@ $("body").on("touchmove", function(e) {
         -o-transform: translateZ(0);
         transform: translateZ(0);
         -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
+        -webkit-user-select: text;
+        -moz-user-select: text;
+        -ms-user-select: text;
+        user-select: text;
         -webkit-text-size-adjust: none;
         -moz-text-size-adjust: none;
         -ms-text-size-adjust: none;
