--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -382,6 +382,7 @@
     <li class="channel" id="31"><a >奇闻</a></li>
     <li class="channel" id="32"><a >萌宠</a></li>
     <li class="channel" id="35"><a >App</a></li>
+    <li class="channel" id="36"><a >自媒体</a></li>
 </ul>
 <div id="wrapper1">
     <div id="scroller1">
