--- a/public/insertAd/index.html
+++ b/public/insertAd/index.html
@@ -14,6 +14,6 @@
 	别人的页面
 	<div id="error"><img src="../img/share.png" alt=""/></div>
 </div>
-<script src="ad.js"></script>
+<script src="http://deeporiginalx.com/insertAd/ad-0.0.2.js"></script>
 </body>
 </html>
