--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -365,7 +365,7 @@
     <li class="channel" id="8"><a >军事</a></li>
     <li class="channel" id="13"><a >历史</a></li>
     <li class="channel" id="18"><a >故事</a></li>
-    <li class="channel" id="12"><a >旅游</a></li>
+    <li class="channel" id="12"><a >旅游</a></li>ç
     <li class="channel" id="19"><a >美文</a></li>
     <li class="channel" id="15"><a >美食</a></li>
     <li class="channel" id="29"><a >外媒</a></li>
@@ -375,6 +375,7 @@
     <li class="channel" id="35"><a >App</a></li>
     <li class="channel" id="36"><a >自媒体</a></li>
     <li class="channel" id="39"><a >帅哥</a></li>
+    <li class="channel" id="37"><a >风水玄学</a></li>
 </ul>
 <div id="wrapper1">
     <div id="scroller1">
