--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -365,7 +365,7 @@
     <li class="channel" id="8"><a >军事</a></li>
     <li class="channel" id="13"><a >历史</a></li>
     <li class="channel" id="18"><a >故事</a></li>
-    <li class="channel" id="12"><a >旅游</a></li>ç
+    <li class="channel" id="12"><a >旅游</a></li>
     <li class="channel" id="19"><a >美文</a></li>
     <li class="channel" id="15"><a >美食</a></li>
     <li class="channel" id="29"><a >外媒</a></li>
