--- a/public/search.html
+++ b/public/search.html
@@ -7,9 +7,12 @@
     <!--<link rel="stylesheet" href="css/indexP.css"/>-->
     <link rel="stylesheet" href="css/search.css"/>
     <link rel="stylesheet" href="css/phone.css"/>
+    <link rel="stylesheet" href="css/111.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/indexP.js"></script>
-    <script src="js/search5.js"></script>
+    <script src="js/jquery.cookie.js"></script>
+    <script src="js/bootstrap-pagy.min.js"></script>
+    <script src="js/newSearch.js"></script>
 </head>
 <body>
 <div class="topBox">
@@ -168,7 +171,9 @@
     <img src="imgPhone/phoneError.png">
 </div>
 <div class="phoneErrorword">很抱歉，没有找到相关的网页</div>
-
+<div class="buttonBox pagination ">
+    <ul></ul>
+</div>
 
 </body>
 </html>
