change title color

--- a/public/search.html
+++ b/public/search.html
@@ -38,10 +38,10 @@
                 <div class="sanjiao" ></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="localNews.html">应用案例
+            <!-- <li><a href="localNews.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
-            </a></li>
+            </a></li> -->
             <li><a href="serveP.html">我们的服务
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
@@ -72,12 +72,12 @@
         </div>
         <div class="navWord" style="font-size: 15px">我们的服务</div>
     </a></li>
-    <li style="height: 45px"><a href="localNews.html">
+    <!-- <li style="height: 45px"><a href="localNews.html">
         <div class="iconP" style="width: 22px;height:22px">
             <img src="imgPhone/icon3.png">
         </div>
         <div class="navWord" style="font-size: 15px">应用案例</div>
-    </a></li>
+    </a></li> -->
     <li style="height: 45px"><a href="bokeP.html">
         <div class="iconP" style="width: 22px;height:22px">
             <img src="imgPhone/icon5.png">
