--- a/public/href.html
+++ b/public/href.html
@@ -3,19 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <script src="js/jquery-1.11.3.min.js"></script>
 </head>
 <script>
-    function isInstalled(){
-        //var the_href=$(".down_app").attr("href");获得下载链接
+    $(function(){
+//        function isInstalled(){
+            //var the_href=$(".down_app").attr("href");获得下载链接
+        $('a').click(function(){
+            $('a').attr('href','qidianzixun18511530733://');
+            setTimeout(function(){
+           $('a').attr('href','https://itunes.apple.com/cn/app/tou-tiao-bai-jia/id987333155?mt=8');//如果超时就跳转到app下载页
+       },500);
+        })
 
-       window.location="qidianzixun18511530733://";//打开某手机上的某个app应用
+//            window.location="qidianzixun18511530733://";//打开某手机上的某个app应用
 //        window.location='https://www.baidu.com/';
-        setTimeout(function(){
-            window.location='https://itunes.apple.com/cn/app/tou-tiao-bai-jia/id987333155?mt=8';//如果超时就跳转到app下载页
-        },500);
-    }
+//        setTimeout(function(){
+//            window.location='https://itunes.apple.com/cn/app/tou-tiao-bai-jia/id987333155?mt=8';//如果超时就跳转到app下载页
+//        },500);
+//        }
+    })
+
 </script>
 <body>
-<a href="javascript:;" style="display:block;font-size:36px;margin:50px 50px" onclick="isInstalled()">打开</a>
+<a href="" style="display:block;font-size:56px;margin:50px 50px">快打开</a>
 </body>
 </html>
