--- a/public/dingyue.html
+++ b/public/dingyue.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>订阅</title>
     <link rel="stylesheet" href="css/dingyue.css"/>
     <link rel="stylesheet" href="css/indexQidian.css"/>
     <script src="js/jquery-1.11.3.min.js"></script>
@@ -36,7 +36,7 @@
     });
 
 </script>
-<body>
+<body style="background:#f6f6f6">
 <div class="imgs"><img src=""></div>
 <span class="Tword">住宅产业</span>
 <div class="Stitle none">介绍</div>
