--- a/public/dingyue.html
+++ b/public/dingyue.html
@@ -97,7 +97,7 @@
 <div class="sword">读奇点 阅天下</div>
 </div>
 <!--<a href="javascript:;" id="download">-->
-<a id="download">
+<a id="download" target="_blank">
 下载App
 </a>
 <!--</a>-->
