--- a/public/dingyue.html
+++ b/public/dingyue.html
@@ -42,6 +42,9 @@
 <div class="Stitle none">介绍</div>
 <div class="Jsword">关注农村住宅产业关注农村住宅产业</div>
 <div class="Stitle">介绍</div>
+<div class="yingdao">
+    <img src="img/tishi.png">
+</div>
 <ul class="mainBox">
     <!--<span class="load">正在加载...</span>-->
     <!--<a href=""><li>-->
