--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset=utf-8>
 	<meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-	<title>THREE</title>
+	<title>源：用机器智能增强商业应用</title>
 	<script src="three-learn1/js/three.js"></script>
 	<script src="three-learn1/js/MTLLoader.js"></script>
 	<script src="three-learn1/js/OBJLoader.js"></script>
