--- a/public/play/video.html
+++ b/public/play/video.html
@@ -47,7 +47,7 @@
 <script src="js/zy.media.min.js"></script>
 <script>
 
-    zymedia('video');
+    zymedia('video',{preload:'auto'});
 
 </script>
 
