--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,9 @@
 		</div>
 		<div class="page-one-nav">
 			<img src="three-learn1/img/topIcon.png">
-			<span class="span-serve"><a href="#serve">核心服务</a></span>
-			<span class="span-first"><a href="">首页</a></span>
+			<span class="span-first"><a href="https://github.com/SourceCore/sdk">SDK</a></span>
+			<span class="span-serve "><a href="#serve" class='marginRight'>核心服务</a></span>
+			<span class="span-first "><a href="" class='marginRight'>首页</a></span>
 		</div>
 		<div class="present">
 			<span class="present-big">最智能的新媒体技术和解决方案提供商</span>
