--- a/public/news.html
+++ b/public/news.html
@@ -97,11 +97,12 @@ $("body").on("touchmove", function(e) {
             <span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>
             <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
         </div> -->
-        <div class="qidianTop">
+        <!-- top logo -->
+        <!-- <div class="qidianTop">
             <div class="qidianlogo"><img src="img/qiDian.png"></div>
             <div class="qidianCirle"><div></div></div>
             <div class="qidianWord">读奇点 阅天下</div>
-        </div>
+        </div> -->
 <div class="banner" style="top:25px">
     <div class="yingdao">
         <img src="img/tishi.png">
