--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="page-one-nav">
 			<img src="three-learn1/img/topIcon.png">
-			<span class="span-first"><a href="https://github.com/SourceCore/sdk">SDK</a></span>
+			<span class="span-first"><a href="https://github.com/SourceCore/sdk" style='border-bottom:0px'>SDK</a></span>
 			<span class="span-serve "><a href="#serve" class='marginRight'>核心服务</a></span>
 			<span class="span-first "><a href="" class='marginRight'>首页</a></span>
 		</div>
