--- a/public/play/video.html
+++ b/public/play/video.html
@@ -6,6 +6,7 @@
 <title>媒体播放器</title>
 <link rel="stylesheet" href="css/zy.media.min.css">
     <script src=".././js/jquery-1.11.3.min.js"></script>
+    <script src="js/zy.media.min.js"></script>
 </head>
 <script>
     $(function(){
@@ -13,42 +14,97 @@
             url =decodeURIComponent(location.search);//获取url中"?"符后的字串
 //            alert(url.substring(5));
         var src=url.substring(5);
-        // var win=$(window).width();
-        var hei=$(window).height();
+        var win=$(window).width();
+        var hei=$(window).height()
         var vHeights;
         var vWidth=$(window).width();
-        var vWidths=src.substr(src.indexOf("width=")+6,3);
-        vHeights=src.substr(src.indexOf("height=")+7,3);
-        var vids=src.replace(new RegExp(vWidths, 'g'),vWidth).replace(new RegExp(vHeights, 'g'),Math.ceil(vWidth*vHeights/vWidths)).replace(new RegExp('preview.html','g'),'player.html');
-        $(".iframes").attr('height',Math.ceil(vWidth*vHeights/vWidths));
-        $(".iframes").attr('width',vWidth);
-        if(src.match('.html')=='.html'){
+        if(src.match('width=')=='width='){
+            var vWidths=src.substr(src.indexOf("width=")+6,3);
+            vHeights=src.substr(src.indexOf("height=")+7,3);
+            var vids=src.replace(new RegExp(vWidths, 'g'),vWidth).replace(new RegExp(vHeights, 'g'),Math.ceil(vWidth*vHeights/vWidths)).replace(new RegExp('preview.html','g'),'player.html');
+            $(".iframes").attr('height',Math.ceil(vWidth*vHeights/vWidths));
+            $(".iframes").attr('width',vWidth);console.log(vids);
+        }else{
+            var vids=src;
+//            alert(vids);
+        }
+        if((src.match('youku')=='youku')||(src.match('.html')=='.html')){
+//            alert(1);
             $(".iframes").attr({'src':vids}).css({'display':'block','margin':'auto'});
             $(".zy_media").css("display",'none');
         }else{
             $(".sources").attr('src',src);
-            $(".zy_media").css("display",'block');
+            $(".zy_media").css({"display":'block'});
             $(".iframes").css('display','none');
+//            $('.zy_media').
 //            zymedia('video');
         }
-    })
-</script>
 
+
+    })
+//    <!--function launchFullScreen(element) {-->
+//        <!--if(element.requestFullscreen) {-->
+//            <!--element.requestFullscreen();-->
+//        <!--} else if(element.mozRequestFullScreen) {-->
+//            <!--element.mozRequestFullScreen();-->
+//        <!--} else if(element.webkitRequestFullscreen) {-->
+//            <!--element.webkitRequestFullscreen();-->
+//        <!--} else if(element.msRequestFullscreen) {-->
+//            <!--element.msRequestFullscreen();-->
+//        <!--}-->
+//    <!--}-->
+
+</script>
+<style>
+    .zy_media,video{
+        background-color: transparent;
+        position: relative;
+        left: 0px;
+        top: 0px;
+        min-width: 0px;
+        max-width: none;
+        min-height: 0px;
+        max-height: none;
+        width: 100%;
+        height: 100%;
+        display: block;
+        transform: none;
+        margin: 0px !important;
+        flex: 1 1 0% !important;
+    }
+    :-webkit-full-screen {
+        background-color: white;
+        z-index: 2147483647;
+    }
+    video {
+        object-fit: contain;
+    }
+</style>
 <body>
 <!--http://video.jiecao.fm/9/9/%E5%8D%97/%E5%88%9B%E6%84%8F%E7%94%BB.mp4-->
 <!--http://v.qq.com/iframe/player.html?vid=p0327a7pt4p&width=290&height=217.5&auto=0-->
 <div class="zy_media">
-    <video poster="" data-config='{"mediaTitle": ""}'>
+    <video poster="" data-config='{"mediaTitle": ""}' preload="auto" >
+        请稍后
         <source src="" type="video/mp4" class="sources">
         您的浏览器不支持HTML5视频
     </video>
 </div>
-<iframe src="" frameborder="0" allowfullscreen class="iframes"></iframe>
-<script src="js/zy.media.min.js"></script>
+<input type="button"/>
+<!--<video src="http://video.jiecao.fm/9/9/%E5%8D%97/%E5%88%9B%E6%84%8F%E7%94%BB.mp4" class="videoresres"    poster=""   id="videoid" onclick="paly_('0')" width="100%"></video>-->
+<iframe src="" frameborder="0" allowfullscreen='true' class="iframes"></iframe>
+<!--<video src="http://video.jiecao.fm/9/6/%E7%83%A8/%E7%9B%B8%E5%A3%B0.mp4" class="videoresres"    poster=""   id="videoid" onclick="paly_('0')" width="100%" preload="auto"></video>-->
+<!--<script src="js/zy.media.min.js"></script>-->
 <script>
 
-    zymedia('video',{preload:'auto',autoplay:true,videoHeight:$(window).height()});
-
+    zymedia('video',{preload:'auto',autoplay:true,success:function(){
+    },videoHeight:$(window).height()});
+//    $(function(){
+//        $("input").click(function(){
+//            launchFullScreen($('video')[0]);
+//        })
+//        $("input").trigger('click');
+//    })
 </script>
 
 </body>
