--- a/public/zhuanti-share/index.html
+++ b/public/zhuanti-share/index.html
@@ -16,7 +16,7 @@
     <span class="abs">摘要</span><span class="absWord">党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届</span>
 </div>
 <div class="mainBox">
- <div class="mainData">
+ <!-- <div class="mainData"> -->
     <!--<div class="titleData">-->
         <!--<div class="colorBox"></div>-->
         <!--<span class="titleName">焦点新闻</span>-->
@@ -54,7 +54,7 @@
              <!--</div>-->
          <!--</div>-->
      <!--</div>-->
- </div>
+ <!-- </div> -->
 </div>
 </body>
 </html>
