--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -379,14 +379,14 @@
 </ul>
 <div id="wrapper1">
     <div id="scroller1">
-        <div id = "scroller-pullDown" style="position: fixed;top: -43px;left: 0;width: 100%">
-            <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
-        </div>
-        <div class="refresh">
-            <img src="img/load.gif">
-            <span>正在刷新更多数据...</span>
-        </div>
+        <!--<div id = "scroller-pullDown" style="position: fixed;top: -43px;left: 0;width: 100%">-->
+            <!--&lt;!&ndash;<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>&ndash;&gt;-->
+            <!--<span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>-->
+        <!--</div>-->
+        <!--<div class="refresh">-->
+            <!--<img src="img/load.gif">-->
+            <!--<span>正在刷新更多数据...</span>-->
+        <!--</div>-->
         <ul class="mainBox">
             <span class="load">正在加载...</span>
             <!--<a href=""><li>-->
@@ -452,7 +452,7 @@
          <div class="loadMord">正在加载更多新闻...</div>
         <div id = "scroller-pullUp" style="position: absolute;bottom: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span>
+            <!--<span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span>-->
         </div>
     </div>
 </div>
